--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,19 @@
 astroid==2.4.2
+attrs==20.2.0
 click==7.1.2
+flake8==3.8.3
+iniconfig==1.1.1
 isort==5.6.4
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+packaging==20.4
+pluggy==0.13.1
+py==1.9.0
+pycodestyle==2.6.0
+pyflakes==2.2.0
 pylint==2.6.0
+pyparsing==2.4.7
+pytest==6.1.2
 six==1.15.0
 SQLAlchemy==1.3.20
 toml==0.10.1
